--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,7 +50,7 @@ set-option -g status-fg white
 
 # Left side of status bar
 set-option -g status-left-length 30
-set-option -g status-left "#[fg=#163738,bg=#88C0D0] #S #[fg=default,bg=default] "
+set-option -g status-left "#[fg=#3B4252,bg=#88C0D0] #S #[fg=default,bg=default] "
 
 # Window status
 set-option -g window-status-format "#[fg=#E5E9F0,bg=brightblack] #I #[fg=#E5E9F0,bg=black] #W "
@@ -60,7 +60,7 @@ set-option -g status-justify left
 
 # Right side of status bar
 set-option -g status-right-length 40
-set-option -g status-right " #[fg=brightwhite,bg=black] #(date) #[fg=#163738,bg=#88C0D0] #(whoami) "
+set-option -g status-right " #[fg=brightwhite,bg=black] #(date) #[fg=#3B4252,bg=#88C0D0] #(whoami) "
 
 # Pane number indicator
 set-option -g display-panes-colour brightblack
