--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -45,6 +45,13 @@ utility       = { shadow = false; };
   "class_g ?= 'Xfce4-power-manager'"
 ];
 
+# Focus
+inactive-dim = 0.2;
+focus-exclude = [
+"class_g *?= 'dmenu'",
+"class_g *? ='slock'",
+];
+
 # Other
 refresh-rate = 0;
 use-ewmh-active-win = true;
