--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
 gtk-theme-name=Arc-Darker
-gtk-icon-theme-name=Arc
+gtk-icon-theme-name=Tango
 gtk-font-name=cherry 10
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
