--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,21 +46,21 @@ set-option -g status-interval 5
 
 # Basic status bar colors
 set-option -g status-bg default
-set-option -g status-fg white
+set-option -g status-fg black
 
 # Left side of status bar
-set-option -g status-left-length 30
-set-option -g status-left "#[fg=#3B4252,bg=#88C0D0] #S #[fg=default,bg=default] "
+set-option -g status-left-length 40
+set-option -g status-left "#[fg=colour0,bg=colour1] #S #[fg=default,bg=default] "
 
 # Window status
-set-option -g window-status-format "#[fg=#E5E9F0,bg=brightblack] #I #[fg=#E5E9F0,bg=black] #W "
-set-option -g window-status-current-format "#[fg=#163638,bg=#E5E9F0] #I #[fg=#163638,bg=#88C0D0] #W "
+set-option -g window-status-format "#[fg=colour7,bg=colour4] #I #[fg=colour7,bg=colour8] #W "
+set-option -g window-status-current-format "#[fg=colour0,bg=colour7] #I #[fg=colour0,bg=colour12] #W "
 set-option -g window-status-separator " "
 set-option -g status-justify left
 
 # Right side of status bar
-set-option -g status-right-length 40
-set-option -g status-right " #[fg=brightwhite,bg=black] #(date) #[fg=#3B4252,bg=#88C0D0] #(whoami) "
+set-option -g status-right-length 60
+set-option -g status-right " #[fg=colour0,bg=colour7] #(date +'%H:%M') #[fg=colour0,bg=colour12] #(echo 'kill the headlights and put it in neutral') "
 
 # Pane number indicator
 set-option -g display-panes-colour brightblack
