--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,42 +1,51 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
- <match target="font">
-  <edit mode="assign" name="hinting" >
-  <bool>false</bool>
-  </edit>
- </match>
- <match target="font" >
-  <edit mode="assign" name="autohint" >
-  <bool>false</bool>
-  </edit>
- </match>
- <match target="font">
-  <edit mode="assign" name="hintstyle" >
-  <const>hintslight</const>
-  </edit>
- </match>
- <match target="font">
-  <edit mode="assign" name="rgba" >
-  <const>none</const>
-  </edit>
- </match>
- <match target="font">
-  <edit mode="assign" name="antialias" >
-  <bool>false</bool>
-  </edit>
- </match>
- <match target="font">
-  <edit mode="assign" name="lcdfilter">
-  <const>lcddefault</const>
-  </edit>
- </match>
-  <match target="font">
-   <test name="family" qual="any">
-    <string>Hack</string>
-   </test>
-    <edit name="antialias" mode="assign">
-     <bool>true</bool>
-    </edit>
-  </match>
+    <match target="font">
+        <edit mode="assign" name="hinting" >
+            <bool>false</bool>
+        </edit>
+    </match>
+    <match target="font" >
+        <edit mode="assign" name="autohint" >
+            <bool>false</bool>
+        </edit>
+    </match>
+    <match target="font">
+        <edit mode="assign" name="hintstyle" >
+            <const>none</const>
+        </edit>
+    </match>
+    <match target="font">
+        <edit mode="assign" name="rgba" >
+            <const>none</const>
+        </edit>
+    </match>
+    <match target="font">
+        <edit mode="assign" name="antialias" >
+            <bool>false</bool>
+        </edit>
+    </match>
+    <match target="font">
+        <edit mode="assign" name="lcdfilter">
+            <const>lcddefault</const>
+        </edit>
+    </match>
+    <match target="font">      
+        <test name="family" qual="any">
+            <string>Hack</string>
+        </test>
+        <edit name="antialias" mode="assign">
+            <bool>true</bool>
+        </edit>
+        <edit mode="assign" name="hinting" >
+            <bool>true</bool>
+        </edit>
+        <edit name="autohint" mode="assign">
+            <bool>true</bool>
+        </edit>
+        <edit mode="assign" name="hintstyle" >
+            <const>hintfull</const>
+        </edit>
+    </match>
 </fontconfig>
