--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,6 +66,6 @@ set-option -g status-right " #[fg=colour0,bg=colour7] #(date +'%H:%M') #[fg=colo
 set-option -g display-panes-colour brightblack
 set-option -g display-panes-active-colour brightwhite
 
-# Clock mode
+# Clock mode.
 set-option -g clock-mode-colour white
 set-option -g clock-mode-style 24
