--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,11 @@
+## General settings
+# Quiet mode
+set-option -g monitor-activity on
+set-option -g visual-activity off
+set-option -g bell-action none
+
 # Default terminal
 set-option -g default-terminal "screen-256color"
-
-# Turn the mouse on
-set-option -g mouse on
 
 # Time in milliseconds for which tmux waits after an escape
 set-option -g escape-time 0
@@ -14,29 +17,11 @@ set-option -g focus-events on
 set-option -g history-limit 10000
 set-option -g history-file ~/.tmux/tmuxhistory
 
-# Activity
-set-option -g monitor-activity on
-set-option -g visual-activity off
-
-# Start window index at 1
-set-option -g base-index 1
-
-# Start pane index at 1
-set-option -g pane-base-index 1
-
 # Rename window to reflect current program
 set-window-option -g automatic-rename on
 
 # Renumber windows when one is closed
 set-option -g renumber-windows on
-
-# No bells at all
-set-option -g bell-action none
-
-# Make mouse drag end behavior configurable
-unbind-key -T copy-mode-vi MouseDragEnd1Pane
-bind-key -T copy-mode-vi WheelUpPane select-pane \; send-keys -t{mouse} -X clear-selection \; send-keys -t{mouse} -X -N 5 scroll-up
-bind-key -T copy-mode-vi WheelDownPane select-pane \; send-keys -t{mouse} -X clear-selection \; send-keys -t{mouse} -X -N 5 scroll-down
 
 # Status position
 set-option -g status-position bottom
@@ -44,9 +29,42 @@ set-option -g status-position bottom
 # Status update interval
 set-option -g status-interval 5
 
+# Turn the mouse on
+set-option -g mouse on
+
+# Make mouse drag end behavior configurable
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
+bind-key -T copy-mode-vi WheelUpPane select-pane \; send-keys -t{mouse} -X clear-selection \; send-keys -t{mouse} -X -N 5 scroll-up
+bind-key -T copy-mode-vi WheelDownPane select-pane \; send-keys -t{mouse} -X clear-selection \; send-keys -t{mouse} -X -N 5 scroll-down
+
+
+## Key bindings
+# Remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-q
+bind-key C-q send-prefix
+
+# Split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# Switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+
+## Theme
+# Clock mode
+set-option -g clock-mode-colour coulour15
+set-option -g clock-mode-style 24
+
 # Basic status bar colors
-set-option -g status-bg default
-set-option -g status-fg black
+set-option -g status-bg colour0
+set-option -g status-fg colour15
 
 # Left side of status bar
 set-option -g status-left-length 40
@@ -60,12 +78,8 @@ set-option -g status-justify left
 
 # Right side of status bar
 set-option -g status-right-length 60
-set-option -g status-right " #[fg=colour0,bg=colour7] #(date +'%H:%M') #[fg=colour0,bg=colour12] #(echo 'kill the headlights and put it in neutral') "
+set-option -g status-right " #[fg=colour0,bg=colour7] %d/%m #[fg=colour0,bg=colour12] %H:%M:%S
 
 # Pane number indicator
-set-option -g display-panes-colour brightblack
-set-option -g display-panes-active-colour brightwhite
-
-# Clock mode.
-set-option -g clock-mode-colour white
-set-option -g clock-mode-style 24
+set-option -g display-panes-colour colour0
+set-option -g display-panes-active-colour coulour15
