--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,7 +78,7 @@ set-option -g status-justify left
 
 # Right side of status bar
 set-option -g status-right-length 60
-set-option -g status-right " #[fg=colour0,bg=colour7] %d/%m #[fg=colour0,bg=colour12] %H:%M:%S
+set-option -g status-right " #[fg=colour0,bg=colour7] %d/%m #[fg=colour0,bg=colour12] %H:%M:%S "
 
 # Pane number indicator
 set-option -g display-panes-colour colour0
