--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,27 +59,26 @@ bind -n M-Down select-pane -D
 
 ## Theme
 # Clock mode
-set-option -g clock-mode-colour coulour15
 set-option -g clock-mode-style 24
 
-# Basic status bar colors
-set-option -g status-bg colour0
-set-option -g status-fg colour15
+# general status bar colors
+set-option -g status-bg default
+set-option -g status-fg default
 
-# Left side of status bar
+# Number of session opened
 set-option -g status-left-length 40
-set-option -g status-left "#[fg=colour0,bg=colour1] #S #[fg=default,bg=default] "
+set-option -g status-left "#[fg=colour0,bg=colour3] #S #[fg=default,bg=default] "
 
-# Window status
-set-option -g window-status-format "#[fg=colour7,bg=colour4] #I #[fg=colour7,bg=colour8] #W "
-set-option -g window-status-current-format "#[fg=colour0,bg=colour7] #I #[fg=colour0,bg=colour12] #W "
-set-option -g window-status-separator " "
+# Windows status
+set-option -g window-status-format "#[fg=colour0,bg=colour8] #I #[fg=colour0,bg=colour7] #W "
+set-option -g window-status-current-format "#[fg=colour0,bg=colour6] #I #[fg=colour0,bg=colour14] #W "
+set-option -g window-status-separator " | "
 set-option -g status-justify left
 
-# Right side of status bar
+# Date
 set-option -g status-right-length 60
-set-option -g status-right " #[fg=colour0,bg=colour7] %d/%m #[fg=colour0,bg=colour12] %H:%M:%S "
+set-option -g status-right " #[fg=colour0,bg=colour6] %d/%m #[fg=colour0,bg=colour14] %H:%M "
 
-# Pane number indicator
-set-option -g display-panes-colour colour0
-set-option -g display-panes-active-colour coulour15
+# Pane colors
+set-option -g pane-border-style "fg=colour7,bg=default"
+set-option -g pane-active-border-style "fg=colour6,bg=default"
