--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -34,13 +34,13 @@
             <bool>true</bool>
         </edit>
         <edit mode="assign" name="hinting" >
-            <bool>true</bool>
+            <bool>false</bool>
         </edit>
         <edit name="autohint" mode="assign">
-            <bool>true</bool>
+            <bool>false</bool>
         </edit>
         <edit mode="assign" name="hintstyle" >
-            <const>hintfull</const>
+            <const>none</const>
         </edit>
     </match>
 </fontconfig>
