--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,8 +45,8 @@ set-option -g prefix C-q
 bind-key C-q send-prefix
 
 # Split panes using | and -
-bind h split-window -h
-bind v split-window -v
+bind h split-window -v
+bind v split-window -h
 unbind '"'
 unbind %
 
