--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,10 +1,11 @@
 # general
 hwdec=yes
-#hwdec=nvdec
+#hwdec=vdpau
 hwdec-codecs=all
 deband=no
 interpolation=no
 vd-lavc-dr=yes
+input-ipc-server=/tmp/mpvsocket
 
 # window
 geometry=50%:50%
@@ -15,11 +16,11 @@ autofit-larger=90%
 keep-open=yes
 pause=yes
 volume=50
-screenshot-directory='~~desktop/'
+screenshot-directory='~~Pictures/'
 
 # cache
 cache=yes
-cache-secs=180
+demuxer-max-bytes=20480KiB
 
 # youtube-dl
 ytdl-format=best[height<=?480]+bestaudio/best
@@ -29,3 +30,4 @@ ytdl-raw-options=no-check-certificate=
 osd-playing-msg = '${filename}'
 [protocol.https]
 osd-playing-msg = '${media-title}'
+term-playing-msg='$(media-title)'
