--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,55 +1,8 @@
-# Backend/performance options
+# Backend/GLX
 backend = "glx";
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
-
-# Fading
-##fading = false;
-##fade-delta = 3;
-##fade-in-step = 0.03;
-##fade-out-step = 0.03;
-## no-fading-openclose = true;
-##fade-exclude = [ ];
-
-# Shadows
-##shadow = false;
-##no-dnd-shadow = true;
-##no-dock-shadow = true;
-##clear-shadow = true;
-##shadow-radius = 7;
-##shadow-offset-x = -7;
-##shadow-offset-y = -7;
-##shadow-opacity = 0.5;
-
-# Disabeling shadows
-# menu        = { shadow = false; };
-dropdown_menu = { shadow = false; };
-popup_menu    = { shadow = false; };
-utility       = { shadow = false; };
-*shadow-exclude = [
-  # From the Ubuntu forums link ('screaminj3sus')
-  "! name~=''",
-  "n:e:Notification",
-  "n:e:Plank",
-  "n:e:Docky",
-  "g:e:Synapse",
-  "g:e:Kupfer",
-  "g:e:Conky",
-  "n:w:*Firefox*",
-  "n:w:*Chrome*",
-  "n:w:*Chromium*",
-  "class_g ?= 'Notify-osd'",
-  "class_g ?= 'Cairo-dock'",
-  "class_g ?= 'Xfce4-notifyd'",
-  "class_g ?= 'Xfce4-power-manager'"
-];
-
-# Focus
-inactive-dim = 0.2;
-focus-exclude = [
-"class_g *?= 'dmenu'",
-"class_g *? ='slock'",
-];
+glx-use-copysubbuffermesa = true;
 
 # Other
 refresh-rate = 0;
@@ -59,3 +12,58 @@ unredir-if-possible = true;
 detect-client-opacity = true;
 detect-transient = true;
 detect-client-leader = true;
+experimental-backends = true;
+
+# Dim
+inactive-dim = 0.2;
+focus-exclude = [
+"class_g *?= 'dmenu'",
+"class_g *? ='slock'",
+"class_g *? ='URxvt'",
+];
+
+# Fading (Default 10 / 0.028 / 0.03)
+fading = true;
+fade-delta = 2;
+fade-in-step = 0.02;
+fade-out-step = 0.02;
+no-fading-openclose = false;
+
+fade-exclude = [ ];
+
+# Opacity rules
+opacity-rule = [
+	"95:class_g = 'URxvt' && focused",
+	"90:class_g = 'URxvt' && !focused"
+];
+
+# Shadows (Default 12 -15 -15 0.75)
+shadow = true;
+no-dnd-shadow = true;
+no-dock-shadow = true;
+shadow-radius = 12;
+shadow-offset-x = -6;
+shadow-offset-y = -6;
+shadow-opacity = 0.33;
+
+shadow-exclude = [
+	"! name~=''",
+	"name = 'XOSD'",
+	"name = 'tint2'",
+	"name = 'Notification'",
+	"name = 'Plank'",
+	"name = 'Docky'",
+	"name = 'Kupfer'",
+	"name = 'xfce4-notifyd'",
+	"name *= 'VLC'",
+	"name *= 'compton'",
+	"name *= 'Chromium'",
+	"name *= 'Chrome'",
+	"name *= 'Firefox'",
+	"class_g = 'Kupfer'",
+	"class_g = 'Synapse'",
+	"class_g ?= 'Notify-osd'",
+	"class_g ?= 'Cairo-dock'",
+	"class_g ?= 'Xfce4-notifyd'",
+	"class_g ?= 'Xfce4-power-manager'"
+];
