--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Arc-Darker
 gtk-icon-theme-name=Tango
-gtk-font-name=Hack 9
+gtk-font-name=IBM Plex Sans 10
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
