--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -40,9 +40,9 @@ bind-key -T copy-mode-vi WheelDownPane select-pane \; send-keys -t{mouse} -X cle
 
 ## Key bindings
 # Remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-q
-bind-key C-q send-prefix
+#unbind C-b
+#set-option -g prefix C-q
+#bind-key C-q send-prefix
 
 # Split panes using | and -
 bind h split-window -v
@@ -57,28 +57,32 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 
-## Theme
-# Clock mode
-set-option -g clock-mode-style 24
+#### COLOUR (Solarized 256)
 
-# general status bar colors
-set-option -g status-bg default
-set-option -g status-fg default
+# default statusbar colors
+set-option -g status-style fg=colour13,bg=default #yellow and base02
 
-# Number of session opened
-set-option -g status-left-length 40
-set-option -g status-left "#[fg=colour0,bg=colour3] #S #[fg=default,bg=default] "
+# default window title colors
+set-window-option -g window-status-style fg=colour244,bg=default #base0 and default
+#set-window-option -g window-status-style dim
 
-# Windows status
-set-option -g window-status-current-format "#[fg=colour0,bg=colour14] #I #[fg=colour0,bg=colour7] #W "
-set-option -g window-status-format "#[fg=colour0,bg=colour4] #I #[fg=colour0,bg=colour14] #W "
-set-option -g window-status-separator " | "
-set-option -g status-justify left
+# active window title colors
+set-window-option -g window-status-current-style fg=colour5,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
 
-# Date
-set-option -g status-right-length 60
-set-option -g status-right " #[fg=colour0,bg=colour4] %d/%m #[fg=colour0,bg=colour14] %H:%M "
+# pane border
+set-option -g pane-border-style fg=colour6 #base02
+set-option -g pane-active-border-style fg=colour13 #base01
 
-# Pane colors
-set-option -g pane-border-style "fg=colour15,bg=default"
-set-option -g pane-active-border-style "fg=colour6,bg=default"
+# message text
+set-option -g message-style fg=colour5,bg=default #orange and base02
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour5 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
