--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -1,5 +1,5 @@
 #
-#Conky settings
+# Conky settings
 #
 
 update_interval 2
@@ -11,7 +11,7 @@ double_buffer yes
 no_buffers yes
 
 #
-# Text settings
+# Font settings
 #
 
 use_xft yes
@@ -20,7 +20,7 @@ override_utf8_locale yes
 text_buffer_size 2048
 
 #
-# Position
+# Position settings
 #
 
 own_window_class Conky
@@ -44,9 +44,10 @@ default_shade_color 002b36
 color1 6c71c4
 
 #
+# Text
+#
+
 TEXT
-${scroll 32 Sign for the New Leaf - $machine}
-$hr
 ${color1}Time:$color	${time %H:%M}
 ${color1}Date:$color	${time %d.%m.%Y}
 $hr
