--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,21 +1,26 @@
 # Backend/GLX
 backend = "glx";
 glx-no-stencil = true;
+glx-copy-from-front = false;
 glx-no-rebind-pixmap = true;
 glx-use-copysubbuffermesa = true;
 
 # Other
-refresh-rate = 0;
+refresh-rate = 60;
+vsync = true;
+mark-wmwin-focused = true;
+mark-ovredir-focused = true;
 use-ewmh-active-win = true;
+detect-rounded-corners = true;
 dbe = false;
 unredir-if-possible = true;
 detect-client-opacity = true;
 detect-transient = true;
 detect-client-leader = true;
+xrender-sync-fence = true;
 experimental-backends = true;
 
 # Dim
-inactive-dim = 0.2;
 focus-exclude = [
 "class_g *?= 'dmenu'",
 "class_g *? ='slock'",
@@ -39,12 +44,11 @@ opacity-rule = [
 
 # Shadows (Default 12 -15 -15 0.75)
 shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
-shadow-radius = 12;
-shadow-offset-x = -6;
-shadow-offset-y = -6;
-shadow-opacity = 0.33;
+shadow-radius = 7;
+shadow-offset-x = -4;
+shadow-offset-y = -4;
+shadow-opacity = 0.6;
+shadow-ignore-shaped = false;
 
 shadow-exclude = [
 	"! name~=''",
@@ -55,11 +59,7 @@ shadow-exclude = [
 	"name = 'Docky'",
 	"name = 'Kupfer'",
 	"name = 'xfce4-notifyd'",
-	"name *= 'VLC'",
 	"name *= 'compton'",
-	"name *= 'Chromium'",
-	"name *= 'Chrome'",
-	"name *= 'Firefox'",
 	"class_g = 'Kupfer'",
 	"class_g = 'Synapse'",
 	"class_g ?= 'Notify-osd'",
