--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -2,6 +2,7 @@
 # Conky settings
 #
 
+background yes
 update_interval 2
 total_run_times 0
 net_avg_samples 1
@@ -25,7 +26,8 @@ text_buffer_size 2048
 
 own_window_class Conky
 own_window yes
-own_window_type override
+own_window_type desktop
+#own_window_type override
 own_window_transparent yes
 own_window_hints undecorated,below,sticky,skip_taskbar,skip_pager
 #own_window_argb_visual yes
