--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -62,6 +62,7 @@ shadow-exclude = [
 	"name *= 'compton'",
 	"class_g = 'Kupfer'",
 	"class_g = 'Synapse'",
+	"class_g = 'Conky'",
 	"class_g ?= 'Notify-osd'",
 	"class_g ?= 'Cairo-dock'",
 	"class_g ?= 'Xfce4-notifyd'",
