--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -1,55 +1,46 @@
-#
-# Conky settings
-#
+conky.config = {
+	alignment = 'top_right',
+	background = true,
+  border_width = 1,
+  double_buffer = true,
+  draw_borders = false,
+	stippled_borders = 0,
+  draw_graph_borders = true,
+  draw_outline = false,
+  draw_shades = false,
+	extra_newline = false,
+  cpu_avg_samples = 1,
+	update_interval = 2.0,
+	
+	font = 'kakwafont:style=Regular:pixelsize=12',
+	use_xft = true,
+	no_buffers = true,
+	out_to_console = false,
+	out_to_ncurses = false,
+	out_to_stderr = false,
+	out_to_x = true,
+	
+	own_window = true,
+	own_window_class = 'Conky',
+	own_window_type = 'override',
+	own_window_hints = 'sticky, undecorated, skip_taskbar, skip_pager, below',
+	own_window_transparent = true,
+	show_graph_range = false,
+	show_graph_scale = false,
+	uppercase = false,
+	use_spacer = 'none',
 
-background yes
-update_interval 2
-total_run_times 0
-net_avg_samples 1
-cpu_avg_samples 1
-imlib_cache_size 0
-double_buffer yes
-no_buffers yes
+  gap_x = 18,
+  gap_y = 18,
+  minimum_height = 5,
+  minimum_width = 5,
 
-#
-# Font settings
-#
+	default_color = '#657b83',
+	default_shade_color =  '#002b36',
+	color1 = '#6c71c4',
+}
 
-use_xft yes
-xftfont kakwafont:style=Regular:pixelsize=12
-override_utf8_locale yes
-text_buffer_size 2048
-
-#
-# Position settings
-#
-
-own_window_class Conky
-own_window yes
-own_window_type desktop
-#own_window_type override
-own_window_transparent yes
-own_window_hints undecorated,below,sticky,skip_taskbar,skip_pager
-#own_window_argb_visual yes
-#own_window_argb_value 100
-alignment tr
-gap_x 18
-gap_y 18
-
-#
-# Graphic settings
-#
-
-draw_shades no
-default_color 657b83
-default_shade_color 002b36
-color1 6c71c4
-
-#
-# Text
-#
-
-TEXT
+conky.text = [[
 ${color1}Time:$color	${time %H:%M}
 ${color1}Date:$color	${time %d.%m.%Y}
 $hr
@@ -72,3 +63,4 @@ ${color1} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
 ${color1} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
 ${color1} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
 ${color1} ${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
+]]
