--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -1,15 +1,15 @@
 conky.config = {
 	alignment = 'top_right',
 	background = true,
-  border_width = 1,
-  double_buffer = true,
-  draw_borders = false,
+	border_width = 1,
+    	double_buffer = true,
+    	draw_borders = false,
 	stippled_borders = 0,
-  draw_graph_borders = true,
-  draw_outline = false,
-  draw_shades = false,
+    	draw_graph_borders = true,
+    	draw_outline = false,
+    	draw_shades = false,
 	extra_newline = false,
-  cpu_avg_samples = 1,
+    	cpu_avg_samples = 1,
 	update_interval = 2.0,
 	
 	font = 'kakwafont:style=Regular:pixelsize=12',
@@ -30,10 +30,10 @@ conky.config = {
 	uppercase = false,
 	use_spacer = 'none',
 
-  gap_x = 18,
-  gap_y = 18,
-  minimum_height = 5,
-  minimum_width = 5,
+    	gap_x = 18,
+    	gap_y = 18,
+    	minimum_height = 5,
+    	minimum_width = 5,
 
 	default_color = '#657b83',
 	default_shade_color =  '#002b36',
@@ -41,8 +41,7 @@ conky.config = {
 }
 
 conky.text = [[
-${color1}Time:$color	${time %H:%M}
-${color1}Date:$color	${time %d.%m.%Y}
+${color1}Time:$color${time %H:%M} $alignr ${color1}Date:$color${time %d.%m.%Y}
 $hr
 ${color1}Uptime:$color $uptime
 ${color1}Frequency (in MHz):$color $freq
@@ -57,8 +56,9 @@ Inbound $alignr ${downspeed wlp7s0}
 ${downspeedgraph wlp7s0}
 Outbound $alignr ${upspeed wlp7s0}
 ${upspeedgraph wlp7s0}
+${color1}Sent:$color ${totalup wlp7s0} $alignr ${color1}Recieved:$color ${totaldown wlp7s0} 
 $hr
-${color grey}Name              PID     CPU%   MEM%
+${color grey}Name                PID     CPU%   MEM%
 ${color1} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
 ${color1} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
 ${color1} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
