--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -58,11 +58,12 @@ shadow-exclude = [
 	"name = 'Plank'",
 	"name = 'Docky'",
 	"name = 'Kupfer'",
+	"name = 'Conky'",
 	"name = 'xfce4-notifyd'",
 	"name *= 'compton'",
 	"class_g = 'Kupfer'",
-	"class_g = 'Synapse'",
 	"class_g = 'Conky'",
+	"class_g = 'Synapse'",
 	"class_g ?= 'Notify-osd'",
 	"class_g ?= 'Cairo-dock'",
 	"class_g ?= 'Xfce4-notifyd'",
