--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -2,14 +2,14 @@ conky.config = {
 	alignment = 'top_right',
 	background = true,
 	border_width = 1,
-    double_buffer = true,
-	draw_borders = false,
+    	double_buffer = true,
+    	draw_borders = false,
 	stippled_borders = 0,
-	draw_graph_borders = true,
-	draw_outline = false,
-	draw_shades = false,
+    	draw_graph_borders = true,
+    	draw_outline = false,
+    	draw_shades = false,
 	extra_newline = false,
-	cpu_avg_samples = 1,
+    	cpu_avg_samples = 1,
 	update_interval = 2.0,
 	
 	font = 'kakwafont:style=Regular:pixelsize=12',
@@ -25,15 +25,18 @@ conky.config = {
 	own_window_type = 'override',
 	own_window_hints = 'sticky, undecorated, skip_taskbar, skip_pager, below',
 	own_window_transparent = true,
+	own_window_argb_visual = false,
+	own_window_argb_value = 200,
+	own_window_colour = '#002b36',
 	show_graph_range = false,
 	show_graph_scale = false,
 	uppercase = false,
 	use_spacer = 'none',
 
-	gap_x = 18,
-	gap_y = 18,
-	minimum_height = 5,
-	minimum_width = 5,
+    	gap_x = 18,
+    	gap_y = 18,
+    	minimum_height = 5,
+    	minimum_width = 5,
 
 	default_color = '#657b83',
 	default_shade_color =  '#002b36',
