--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -54,6 +54,9 @@ shadow-exclude = [
 	"! name~=''",
 	"name = 'XOSD'",
 	"name = 'tint2'",
+	"name = 'bar'",
+	"name = 'lemonbar'",
+	"name = 'panel'",
 	"name = 'Notification'",
 	"name = 'Plank'",
 	"name = 'Docky'",
