--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -1,42 +1,46 @@
 conky.config = {
-	alignment = 'top_right',
-	background = true,
-	border_width = 1,
-    	double_buffer = true,
-    	draw_borders = false,
-	stippled_borders = 0,
-    	draw_graph_borders = true,
-    	draw_outline = false,
-    	draw_shades = false,
-	extra_newline = false,
-    	cpu_avg_samples = 1,
-	update_interval = 2.0,
-	
-	font = 'kakwafont:style=Regular:pixelsize=12',
-	use_xft = true,
-	no_buffers = true,
-	out_to_console = false,
-	out_to_ncurses = false,
-	out_to_stderr = false,
-	out_to_x = true,
-	
-	own_window = true,
-	own_window_class = 'Conky',
-	own_window_type = 'override',
-	own_window_hints = 'sticky, undecorated, skip_taskbar, skip_pager, below',
-	own_window_transparent = true,
-	own_window_argb_visual = false,
-	own_window_argb_value = 200,
-	own_window_colour = '#002b36',
-	show_graph_range = false,
-	show_graph_scale = false,
-	uppercase = false,
-	use_spacer = 'none',
+	background				= true,
+	maximum_width				= 250,
+    	minimum_height				= 500,
+	minimum_width				= 250,
+	alignment				= 'top_right',
+	gap_x					= 18,
+    	gap_y					= 18,
 
-    	gap_x = 18,
-    	gap_y = 18,
-    	minimum_height = 5,
-    	minimum_width = 5,
+	own_window				= true,
+	own_window_class			= 'conky',
+	own_window_type				= 'desktop',
+	own_window_transparent			= true,
+	own_window_argb_visual			= false,
+	own_window_argb_value			= 200,
+	own_window_hints			= 'sticky, undecorated, skip_taskbar, skip_pager, below',
+
+    	cpu_avg_samples				= 1,
+	net_avg_samples				= 1,
+	diskio_avg_samples			= 1,
+	if_up_strictness			= 'address',
+    	double_buffer				= true,
+	no_buffers				= true,
+	temperature_unit			= 'celsius',
+	update_interval				= 2.0,
+    	draw_borders				= false,
+	draw_graph_borders			= true,
+	draw_shades				= false,
+	draw_outline				= false,
+	stippled_borders			= 0,
+	format_human_readable			= true,
+	extra_newline				= false,
+	
+	font					= 'IBM Plex Sans:style=Medium:pixelsize=12',
+	use_xft					= true,
+	xftalpha				= 1,
+	override_utf8_locale			= true,
+	short_units				= true,
+	use_spacer				= 'none',
+	out_to_console				= false,
+	out_to_ncurses				= false,
+	out_to_stderr				= false,
+	out_to_x				= true,
 
 	default_color = '#657b83',
 	default_shade_color =  '#002b36',
@@ -44,26 +48,25 @@ conky.config = {
 }
 
 conky.text = [[
-${color1}Time:$color${time %H:%M} $alignr ${color1}Date:$color${time %d.%m.%Y}
+${color1}Time: $color${time %H:%M} $alignr ${color1}Date: $color${time %d.%m.%Y}
 $hr
-${color1}Uptime:$color $uptime
-${color1}Frequency (in MHz):$color $freq
-${color1}Frequency (in GHz):$color $freq_g
-${color1}RAM Usage:$color $mem/$memmax - $memperc% ${membar 4}
-${color1}Swap Usage:$color $swap/$swapmax - $swapperc% ${swapbar 4}
-${color1}CPU Usage:$color $cpu% ${cpubar 4}
-${color1}Processes:$color $processes  ${color1}Running:$color $running_processes
+${color1}Uptime:$color ${alignr}$uptime
+${color1}Frequency (in MHz):$color ${alignr}$freq
+${color1}Frequency (in GHz):$color ${alignr}$freq_g
+${color1}RAM Usage:$color ${alignr}$mem/$memmax - $memperc%
+${color1}Swap Usage:$color ${alignr}$swap/$swapmax - $swapperc%
+${color1}CPU Usage:$color ${alignr}$cpu%
+${color1}Load Average: ${alignr}${color}${loadavg 3} %
+${color1}Processes: $color $processes ${alignr}${color1}Running: $color$running_processes
 $hr
-IP $alignr ${addr wlp7s0}
-Inbound $alignr ${downspeed wlp7s0}
-${downspeedgraph wlp7s0}
-Outbound $alignr ${upspeed wlp7s0}
-${upspeedgraph wlp7s0}
-${color1}Sent:$color ${totalup wlp7s0} $alignr ${color1}Recieved:$color ${totaldown wlp7s0} 
+${color1}Disk Access: $color${alignr}
+${diskiograph /dev/sda}
+${color1}Space used:$color ${alignr}$color${fs_used /} / ${fs_size /} ${color1}($fs_used_perc%)$color
 $hr
-${color grey}Name                PID     CPU%   MEM%
-${color1} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
-${color1} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
-${color1} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
-${color1} ${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
+IP $alignr ${addr wlp2s0}
+Inbound $alignr ${downspeed wlp2s0}
+${downspeedgraph wlp2s0}
+Outbound $alignr ${upspeed wlp2s0}
+${upspeedgraph wlp2s0}
+${color1}Sent:$color ${totalup wlp2s0} $alignr ${color1}Recieved:$color ${totaldown wlp2s0}
 ]]
