now support pywal

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -25,6 +25,7 @@ focus-exclude = [
 "class_g *?= 'dmenu'",
 "class_g *? ='slock'",
 "class_g *? ='URxvt'",
+"class_g *? ='St'",
 ];
 
 # Fading (Default 10 / 0.028 / 0.03)
@@ -38,8 +39,8 @@ fade-exclude = [ ];
 
 # Opacity rules
 opacity-rule = [
-	"95:class_g = 'URxvt' && focused",
-	"90:class_g = 'URxvt' && !focused"
+	"90:class_g = 'URxvt'",
+	"90:class_g = 'St'",
 ];
 
 # Shadows (Default 12 -15 -15 0.75)
@@ -55,12 +56,15 @@ shadow-exclude = [
 	"name = 'XOSD'",
 	"name = 'tint2'",
 	"name = 'bar'",
-	"name = 'lemonbar'",
 	"name = 'panel'",
+	"name = 'lemonbar'",
+	"name = 'polybar'",
+	"name = 'Polybar'",
 	"name = 'Notification'",
 	"name = 'Plank'",
 	"name = 'Docky'",
 	"name = 'Kupfer'",
+	"name = 'conky'",
 	"name = 'Conky'",
 	"name = 'xfce4-notifyd'",
 	"name *= 'compton'",
