updated pretty much everything

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,30 +1,110 @@
+<?xml version="1.0"?>
+<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-  <alias>
-    <family>serif</family>
-    <prefer>
-      <family>IBM Plex Serif</family>
-      <family>Noto Color Emoji</family>
-    </prefer>
-  </alias>
-  <alias>
-    <family>sans-serif</family>
-    <prefer>
-      <family>IBM Plex Sans</family>
-      <family>Noto Color Emoji</family>
-    </prefer>
-  </alias>
-  <alias>
-    <family>sans</family>
-    <prefer>
-      <family>IBM Plex Sans</family>
-      <family>Noto Color Emoji</family>
-    </prefer>
-  </alias>
-  <alias>
-    <family>monospace</family>
-    <prefer>
-      <family>IBM Plex Mono</family>
-      <family>Noto Color Emoji</family>
-    </prefer>
-  </alias>
+	<!-- Styling -->
+	<match target="font">
+		<edit name="autohint" mode="assign">
+			<bool>false</bool>
+		</edit>
+		<edit name="hinting" mode="assign">
+			<bool>true</bool>
+		</edit>
+		<edit name="antialias" mode="assign">
+			<bool>true</bool>
+		</edit>
+		<edit mode="assign" name="hintstyle">
+			<const>hintslight</const>
+		</edit>
+		<edit mode="assign" name="rgba">
+			<const>rgb</const>
+		</edit>
+		<edit mode="assign" name="lcdfilter">
+			<const>lcddefault</const>
+		</edit>
+	</match>
+
+	<!-- Default font (no fc-match pattern) -->
+	<match>
+		<edit mode="prepend" name="family">
+			<string>Ubuntu</string>
+		</edit>
+	</match>
+
+	<!-- Default sans-serif font -->
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>sans-serif</string></test>
+		<edit name="family" mode="prepend" binding="same">
+			<string>Ubuntu</string>
+		</edit>
+	</match>
+
+	<!-- Default serif fonts -->
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>serif</string>
+		</test>
+		<edit name="family" mode="prepend" binding="same">
+			<string>Ubuntu</string>
+		</edit>
+	</match>
+
+	<!-- Default monospace fonts -->
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>monospace</string>
+		</test>
+		<edit name="family" mode="prepend" binding="same">
+			<string>Hack Nerd Font Mono</string>
+		</edit>
+		<edit name="family" mode="append" binding="same">
+			<string>Ubuntu Mono</string>
+		</edit>
+	</match>
+
+
+	<!-- Emoji font -->
+	<match>
+		<test name="family">
+			<string>sans-serif</string>
+		</test>
+		<edit name="family" mode="prepend" binding="same">
+			<string>Twemoji</string>
+		</edit>
+	</match>
+
+	<!-- Fallback fonts preference order -->
+	<alias>
+		<family>serif</family>
+		<prefer>
+			<family>Ubuntu</family>
+			<family>Roboto</family>
+			<family>Twemoji</family>
+		</prefer>
+	</alias>
+	<alias>
+		<family>sans-serif</family>
+		<prefer>
+			<family>Ubuntu</family>
+			<family>Roboto</family>
+			<family>Twemoji</family>
+		</prefer>
+	</alias>
+	<alias>
+	    <family>sans</family>
+		<prefer>
+			<family>Ubuntu</family>
+			<family>Roboto</family>
+			<family>Twemoji</family>
+		</prefer>
+	</alias>
+	<alias>
+		<family>monospace</family>
+		<prefer>
+			<family>Hack Nerd Font</family>
+			<family>Ubuntu Mono</family>
+			<family>Roboto Mono</family>
+			<family>Twemoji</family>
+		</prefer>
+	</alias>
 </fontconfig>
