--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -8,7 +8,7 @@ vd-lavc-dr=yes
 input-ipc-server=/tmp/mpvsocket
 
 # window
-geometry=50%:50%
+geometry=90%:90%
 autofit-smaller=90%
 autofit-larger=90%
 
@@ -16,7 +16,7 @@ autofit-larger=90%
 keep-open=yes
 pause=yes
 volume=50
-screenshot-directory='~~Pictures/'
+screenshot-directory="$HOME"/pictures/
 
 # cache
 cache=yes
