--- a/.local/share/applications/text.desktop
+++ b/.local/share/applications/text.desktop
@@ -1,4 +1,10 @@
 [Desktop Entry]
 Type=Application
 Name=Text editor
-Exec=/usr/local/bin/st -e nvim %u
+TryExec=mle
+Exec=mle %u
+Terminal=true
+Type=Application
+Categories=Utility;TextEditor;
+MimeType=text/english;text/plain;text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-java;text/x-moc;text/x-pascal;text/x-tcl;text/x-tex;application/x-shellscript;text/x-c;text/x-c++;
+Icon=text-editor
