--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-gtk-theme-name=Arc-Darker
+gtk-theme-name=Breeze
 gtk-icon-theme-name=Tango
-gtk-font-name=IBM Plex Sans 10
+gtk-font-name=sans-serif, 10
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
@@ -9,7 +9,8 @@ gtk-button-images=1
 gtk-menu-images=1
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
-gtk-xft-antialias=0
-gtk-xft-hinting=0
-gtk-xft-hintstyle=hintnone
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintmedium
 gtk-cursor-theme-name=Adwaita
+gtk-xft-rgba=rgb
