--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,78 +1,79 @@
-# Backend/GLX
 backend = "glx";
 glx-no-stencil = true;
 glx-copy-from-front = false;
-glx-no-rebind-pixmap = true;
-glx-use-copysubbuffermesa = true;
 
-# Other
-refresh-rate = 60;
-vsync = true;
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
-use-ewmh-active-win = true;
-detect-rounded-corners = true;
-dbe = false;
-unredir-if-possible = true;
-detect-client-opacity = true;
-detect-transient = true;
-detect-client-leader = true;
-xrender-sync-fence = true;
-experimental-backends = true;
-
-# Dim
-focus-exclude = [
-"class_g *?= 'dmenu'",
-"class_g *? ='slock'",
-"class_g *? ='URxvt'",
-"class_g *? ='St'",
+# Opacity
+active-opacity = 1;
+inactive-opacity = 1;
+frame-opacity = 1;
+inactive-opacity-override = false;
+blur-background = false;
+blur-background-exclude = [
 ];
+ 
+blur-strength = 6;
 
-# Fading (Default 10 / 0.028 / 0.03)
+# Fading
 fading = true;
-fade-delta = 2;
-fade-in-step = 0.02;
-fade-out-step = 0.02;
+fade-delta = 3;
 no-fading-openclose = false;
 
 fade-exclude = [ ];
 
-# Opacity rules
+# Other
+mark-wmwin-focused = true;
+mark-ovredir-focused = true;
+detect-rounded-corners = true;
+detect-client-opacity = true;
+vsync = false;
+dbe = false;
+unredir-if-possible = false;
+focus-exclude = [ ];
+detect-transient = true;
+detect-client-leader = true;
+
+# Window type settings
+wintypes:
+{
+		dock = {
+				shadow = false;
+		};
+};
+
 opacity-rule = [
-	"90:class_g = 'URxvt'",
-	"90:class_g = 'St'",
 ];
 
-# Shadows (Default 12 -15 -15 0.75)
-shadow = true;
-shadow-radius = 7;
-shadow-offset-x = -4;
-shadow-offset-y = -4;
-shadow-opacity = 0.6;
-shadow-ignore-shaped = false;
+shadow = false;
+shadow-radius = 12;
+shadow-offset-x = -5;
+shadow-offset-y = -5;
+shadow-opacity = 0.5;
 
 shadow-exclude = [
-	"! name~=''",
-	"name = 'XOSD'",
-	"name = 'tint2'",
-	"name = 'bar'",
-	"name = 'panel'",
-	"name = 'lemonbar'",
-	"name = 'polybar'",
-	"name = 'Polybar'",
-	"name = 'Notification'",
-	"name = 'Plank'",
-	"name = 'Docky'",
-	"name = 'Kupfer'",
-	"name = 'conky'",
-	"name = 'Conky'",
-	"name = 'xfce4-notifyd'",
-	"name *= 'compton'",
-	"class_g = 'Kupfer'",
-	"class_g = 'Conky'",
-	"class_g = 'Synapse'",
-	"class_g ?= 'Notify-osd'",
-	"class_g ?= 'Cairo-dock'",
-	"class_g ?= 'Xfce4-notifyd'",
-	"class_g ?= 'Xfce4-power-manager'"
+    "! name~=''",
+    "name = 'Notification'",
+    "name = 'Plank'",
+    "name = 'Docky'",
+    "name = 'Kupfer'",
+    "name = 'xfce4-notifyd'",
+    "name = 'cpt_frame_window'",
+    "name *= 'VLC'",
+    "name *= 'compton'",
+    "name *= 'picom'",
+    "name *= 'Chromium'",
+    "name *= 'Chrome'",
+    "class_g = 'Firefox' && argb",
+    "class_g = 'Conky'",
+    "class_g = 'Kupfer'",
+    "class_g = 'Synapse'",
+    "class_g ?= 'Notify-osd'",
+    "class_g ?= 'Cairo-dock'",
+    "class_g ?= 'Xfce4-notifyd'",
+    "class_g ?= 'Xfce4-power-manager'",
+    "_GTK_FRAME_EXTENTS@:c",
+    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
+
+corner-radius = 0
+
+xrender-sync-fence = true;
