--- a/.local/share/applications/file.desktop
+++ b/.local/share/applications/file.desktop
@@ -3,8 +3,8 @@ Type=Application
 Name=File manager
 Comment=File manager using nnn
 Icon=folder
-Exec=nnn
-Terminal=true
+Exec=pcmanfm-qt
+Terminal=false
 MimeType=inode/directory;
 Categories=System;FileTools;FileManager;ConsoleOnly;
 Keywords=File;Manager;Management;Explorer;Launcher;
