--- a/.local/share/applications/img.desktop
+++ b/.local/share/applications/img.desktop
@@ -3,10 +3,10 @@ Name=Image viewer
 GenericName=Image viewer
 GenericName[en_US]=Image viewer
 Comment=Fast Image Viewer
-Exec=qimgv %f
+Exec=imv %f
 Terminal=false
 Type=Application
 Categories=Graphics;2DGraphics;Viewer;
 MimeType=image/bmp;image/gif;image/jpeg;image/jpg;image/pjpeg;image/png;image/tiff;image/x-bmp;image/x-pcx;image/x-png;image/x-portable-anymap;image/x-portable-bitmap;image/x-portable-graymap;image/x-portable-pixmap;image/x-tga;image/x-xbitmap;image/heif;image/webp
-Icon=image-viewer
+Icon=gwenview
 Keywords=photo;picture;image;view;gif;webm
