--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -6,6 +6,7 @@ deband=no
 interpolation=no
 vd-lavc-dr=yes
 input-ipc-server=/tmp/mpvsocket
+screenshot-directory=pictures
 
 # window
 geometry=50%:50%
@@ -16,7 +17,6 @@ autofit-smaller=60%x60%
 keep-open=yes
 pause=yes
 volume=50
-screenshot-directory="$HOME/pictures"
 
 # cache
 cache=yes
