fixed discord screensharing

--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -97,9 +97,12 @@ toggle = <super> <ctrl> KEY_F
 [autostart]
 autostart_wf_shell = false
 
+dbus = dbus-update-activation-environment --all &
 pipewire = $HOME/.config/autostart/start-pipewire.sh &
 background =  swaybg --mode fill -i "$HOME/pictures/wall.jpg" &
-portal = /usr/libexec/xdg-desktop-portal-gtk &
+portal = /usr/libexec/xdg-desktop-portal &
+portalgtk = /usr/libexec/xdg-desktop-portal-gtk &
+portalwlr = /usr/libexec/xdg-desktop-portal-wlr &
 gamma = pkill -x wlsunset | wlsunset -l 36.7 -L 3.08 &
 panel = pkill -x waybar; waybar -c .config/waybar/labwc-config -s .config/waybar/labwc-style.css &
 notifications = mako &
@@ -123,7 +126,7 @@ binding_launcher = <super> KEY_D
 command_launcher = tofi-wm
 
 # Screenshots
-binding_screenshot = KEY_PRINT
+binding_screenshot = KEY_SYSRQ
 command_screenshot = grim-copy
 binding_screenshot_interactive = <super> <shift> KEY_S
 command_screenshot_interactive = grim-slurp
@@ -266,12 +269,13 @@ toggle_menu = <super>
 
 # Example configuration:
 #
-# [window-rules]
+[window-rules]
 # maximize_alacritty = on created if app_id is "Alacritty" then maximize
-#
-# You can get the properties of your applications with the following command:
+
 # $ WAYLAND_DEBUG=1 alacritty 2>&1 | kak
-#
 # See Window rules for a complete reference.
 # https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
+
+[workarounds]
+#force_preferred_decoration_mode = true
 
