--- a/.local/share/applications/img.desktop
+++ b/.local/share/applications/img.desktop
@@ -3,7 +3,7 @@ Name=Image viewer
 GenericName=Image viewer
 GenericName[en_US]=Image viewer
 Comment=Fast Image Viewer
-Exec=imv %f
+Exec=imv-dir %f
 Terminal=false
 Type=Application
 Categories=Graphics;2DGraphics;Viewer;
