moved from tofi to fuzzel, changed some script names

--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -104,7 +104,7 @@ portal = /usr/libexec/xdg-desktop-portal &
 portalgtk = /usr/libexec/xdg-desktop-portal-gtk &
 portalwlr = /usr/libexec/xdg-desktop-portal-wlr &
 gamma = pkill -x wlsunset | wlsunset -l 36.7 -L 3.08 &
-panel = pkill -x waybar; waybar -c .config/waybar/labwc-config -s .config/waybar/labwc-style.css &
+panel = pkill -x waybar; waybar -c .config/waybar/stacking-config -s .config/waybar/stacking-style.css &
 notifications = mako &
 clipboard = pkill -x cliphist | wl-paste --watch cliphist store -max-items 100 &
 cursor = gsettings set org.gnome.desktop.interface cursor-theme Breeze_Snow &
@@ -123,7 +123,7 @@ command_terminal = foot
 
 # Start your launcher
 binding_launcher = <super> KEY_D
-command_launcher = tofi-wm
+command_launcher = fuzzel
 
 # Screenshots
 binding_screenshot = KEY_SYSRQ
@@ -213,7 +213,7 @@ binding_left = <alt> <super> KEY_LEFT
 binding_down = <alt> <super> KEY_DOWN
 binding_up = <alt> <super> KEY_UP
 binding_right = <alt> <super> KEY_RIGHT
-# Move the focused window with the same key-bindings, but add Shift.
+
 with_win_left = <ctrl> <super> <alt> KEY_LEFT
 with_win_down = <ctrl> <super> <alt> KEY_DOWN
 with_win_up = <ctrl> <super> <alt> KEY_UP
