minor wayfire change

--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -3,6 +3,7 @@
 [input]
 # Keyboard
 xkb_layout = fr,us
+xkb_variant = azerty
 xkb_options = grp:rctrl_rshift_toggle
 kb_numlock_default_state = true
 #xkb_variant = dvorak,bepo
@@ -124,6 +125,9 @@ command_terminal = foot
 # Start your launcher
 binding_launcher = <super> KEY_D
 command_launcher = fuzzel
+
+binding_menu = <super> <shift> KEY_D
+command_menu = fuzz-launcher
 
 # Screenshots
 binding_screenshot = KEY_SYSRQ
