--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -17,18 +17,18 @@ anchor=center
 lines=10
 width=30
 tabs=4
-horizontal-pad=20
-vertical-pad=10
-inner-pad=10
+horizontal-pad=18
+vertical-pad=8
+inner-pad=0
 image-size-ratio=0.5
 
-line-height=26
+line-height=30
 letter-spacing=0
-layer = top
-exit-on-keyboard-focus-loss = yes
+layer=top
+exit-on-keyboard-focus-loss=yes
 
 [colors]
-background=282828FC
+background=282828EF
 text=ebdbb2ff
 match=427b58ff
 selection=427b58ff
