cleaned some keybinds, streamlined bar

--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -105,7 +105,7 @@ portal = /usr/libexec/xdg-desktop-portal &
 portalgtk = /usr/libexec/xdg-desktop-portal-gtk &
 portalwlr = /usr/libexec/xdg-desktop-portal-wlr &
 gamma = pkill -x wlsunset | wlsunset -l 36.7 -L 3.08 &
-panel = pkill -x waybar; waybar -c .config/waybar/stacking-config -s .config/waybar/stacking-style.css &
+panel = pkill -x waybar; waybar -c .config/waybar/stacking-config -s .config/waybar/style.css &
 notifications = mako &
 clipboard = pkill -x cliphist | wl-paste --watch cliphist store -max-items 100 &
 cursor = gsettings set org.gnome.desktop.interface cursor-theme Breeze_Snow &
@@ -123,10 +123,10 @@ binding_terminal = <super> KEY_ENTER
 command_terminal = foot
 
 # Start your launcher
-binding_launcher = <super> KEY_D
+binding_launcher = <alt> KEY_ENTER
 command_launcher = fuzzel
 
-binding_menu = <super> <shift> KEY_D
+binding_menu = <super> <shift> KEY_ENTER
 command_menu = fuzz-launcher
 
 # Screenshots
