minor keybind tweak

--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -106,7 +106,7 @@ portalgtk = /usr/libexec/xdg-desktop-portal-gtk &
 portalwlr = /usr/libexec/xdg-desktop-portal-wlr &
 gamma = pkill -x wlsunset | wlsunset -l 36.7 -L 3.08 &
 panel = pkill -x waybar; waybar -c .config/waybar/stacking-config -s .config/waybar/style.css &
-notifications = mako &
+notifications = fnott &
 clipboard = pkill -x cliphist | wl-paste --watch cliphist store -max-items 100 &
 cursor = gsettings set org.gnome.desktop.interface cursor-theme Breeze_Snow &
 seatcursor = seat seat0 xcursor_theme Breeze_Snow &
@@ -123,7 +123,7 @@ binding_terminal = <super> KEY_ENTER
 command_terminal = foot
 
 # Start your launcher
-binding_launcher = <alt> KEY_ENTER
+binding_launcher = <super> KEY_D
 command_launcher = fuzzel
 
 binding_menu = <super> <shift> KEY_ENTER
