fixed wlsunset in wayfire

--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -109,6 +109,7 @@ panel = pkill -x waybar; waybar -c .config/waybar/stacking-config -s .config/way
 notifications = fnott &
 clipboard = pkill -x cliphist | wl-paste --watch cliphist store -max-items 100 &
 cursor = gsettings set org.gnome.desktop.interface cursor-theme Breeze_Snow &
+bluelight = pkill -x wlsunset | wlsunset -l 36.7 -L 3.08 &
 seatcursor = seat seat0 xcursor_theme Breeze_Snow &
 # dock = wf-dock
 # idle = swayidle before-sleep swaylock
