fixed wlsunset in wayfire

--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -104,7 +104,7 @@ background =  swaybg --mode fill -i "$HOME/pictures/wall.jpg" &
 portal = /usr/libexec/xdg-desktop-portal &
 portalgtk = /usr/libexec/xdg-desktop-portal-gtk &
 portalwlr = /usr/libexec/xdg-desktop-portal-wlr &
-gamma = pkill -x wlsunset | wlsunset -l 36.7 -L 3.08 &
+gamma = pkill -x wlsunset; wlsunset -l 36.7 -L 3.08 &
 panel = pkill -x waybar; waybar -c .config/waybar/stacking-config -s .config/waybar/style.css &
 notifications = fnott &
 clipboard = pkill -x cliphist | wl-paste --watch cliphist store -max-items 100 &
