new scripts & autologin tty1 setup

--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -126,6 +126,9 @@ command_terminal = foot
 binding_launcher = <super> KEY_D
 command_launcher = fuzzel
 
+binding_run = <super> <shift> KEY_D
+command_run = fuzzel-run
+
 binding_menu = <super> <shift> KEY_ENTER
 command_menu = fuzz-launcher
 
