--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -161,6 +161,10 @@ command_bemoji = bemoji
 binding_clipmanager = <super> KEY_COMMA
 command_clipmanager = clip-manager
 
+# Calculator
+binding_calculator= KEY_CALC
+command_calculator= fuzz-calc
+
 
 # Windows ──────────────────────────────────────────────────────────────────────
 
