added some aliases and scripts

--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -100,6 +100,7 @@ autostart_wf_shell = false
 
 dbus = dbus-update-activation-environment --all &
 pipewire = $HOME/.config/autostart/start-pipewire.sh &
+adaptivesync = wlr-randr --output HDMI-A-1 --adaptive-sync enabled &
 background =  swaybg --mode fill -i "$HOME/pictures/wall.jpg" &
 portal = /usr/libexec/xdg-desktop-portal &
 portalgtk = /usr/libexec/xdg-desktop-portal-gtk &
