cleaner autostart script for both labwc and wayfire, refind the launch scripts for both

--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -97,23 +97,7 @@ toggle = <super> <ctrl> KEY_F
 
 [autostart]
 autostart_wf_shell = false
-
-dbus = dbus-update-activation-environment --all &
-pipewire = $HOME/.config/autostart/start-pipewire.sh &
-adaptivesync = wlr-randr --output HDMI-A-1 --adaptive-sync enabled &
-background =  swaybg --mode fill -i "$HOME/pictures/wall.jpg" &
-portal = /usr/libexec/xdg-desktop-portal &
-portalgtk = /usr/libexec/xdg-desktop-portal-gtk &
-portalwlr = /usr/libexec/xdg-desktop-portal-wlr &
-gamma = pkill -x wlsunset; wlsunset -l 36.7 -L 3.08 &
-panel = pkill -x waybar; waybar -c .config/waybar/stacking-config -s .config/waybar/style.css &
-notifications = fnott &
-clipboard = pkill -x cliphist | wl-paste --watch cliphist store -max-items 100 &
-cursor = gsettings set org.gnome.desktop.interface cursor-theme Breeze_Snow &
-seatcursor = seat seat0 xcursor_theme Breeze_Snow &
-# dock = wf-dock
-# idle = swayidle before-sleep swaylock
-# outputs = kanshi
+script-autostart = exec sh -c "$HOME/.config/autostart/autostart.sh" &
 
 # Applications ─────────────────────────────────────────────────────────────────
 
