minor fuzzel color change + nvim colors highlight plugin

--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -28,13 +28,14 @@ layer=top
 exit-on-keyboard-focus-loss=yes
 
 [colors]
-background=282828EF
-text=ebdbb2ff
-match=427b58ff
-selection=427b58ff
-selection-text=ebdbb2ff
-selection-match=cb4b16ff
-border=427b58ff
+background=#282828DF
+text=#ebdbb2ff
+input=#ebdbb2ff
+match=#427b58ff
+selection=#427b58ff
+selection-text=#ebdbb2ff
+selection-match=#cb4b16ff
+border=#427b58ff
 
 [border]
 width=0
