--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,6 +1,6 @@
 [main]
 include=/usr/share/foot/themes/gruvbox-dark
-#include=$HOME/.config/foot/gruvbox-dark
+#include=~/.config/foot/gruvbox-dark
 font=monospace:size=12
 pad=24x24
 
