minor tmux color change

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -75,7 +75,7 @@ set -g status-justify left
 
 ## Status colors
 set -g status-style fg=brightwhite
-setw -g window-status-current-style fg=black,bg=green
+setw -g window-status-current-style fg=green,bg=default
 
 set -g status-left-length 100
 set -g status-left-style default
