added some aliases

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -83,7 +83,7 @@ set -g status-left "#[fg=black]#[bg=orange] #S #[fg=default]#[bg=default] "
 
 set -g status-right-length 100
 set -g status-right-style default
-set -g status-right "#[fg=brightblue]#[bg=default] #(ip addr | grep -e 'state UP' -A 2 | awk '/inet /{printf $2}') #[fg=black]#[bg=brightblue] #(date +'%H:%M') "
+set -g status-right "#[fg=brightblue]#[bg=default] #(ip addr | grep -e 'state UP' -A 2 | awk '/inet /{printf $2}') #[fg=black]#[bg=brightblue] #(date +'%H:%M') #[fg=default]#[bg=default]"
 
 # Pane Styling
 # set-window-option -g pane-border-status top
