rewritten a bunch of scripts to be POSIX swapped to Cascadia font for now

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -58,6 +58,7 @@
   <alias>
     <family>monospace</family>
     <prefer>
+      <family>Cascadia Code</family>
       <family>Hack</family>
       <family>Noto Mono</family>
       <family>Ubuntu Mono</family>
